# adal-jumys

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 070cc39f9476_drop_users_phone_data_minimization.py  095be758ae68_helpful_votes.py  2dc9e481533f_expand_discrimination_kinds.py  2e86170e63e1_post_reports.py  497b93f73b9a_company_instagram_url.py  5507d9f4a343_initial_schema.py  6f97ec543056_offer_difficulty_pros_cons.py  764ad0f7b8aa_comments_table.py  8fbd58b368e1_review_problems_checklist.py  9d20112acef4_illegal_fines_flag_new_badge_and_action_.py  ecd429d6909b_add_representative_target_type.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  comment.py  company.py  complaint.py  evidence.py  moderation.py  report.py  review.py  tip.py  user.py  vote.py
backend/app/schemas/: comment.py  company.py  complaint.py  discrimination.py  evidence.py  feed.py  moderation.py  response.py  review.py  user.py
backend/app/scripts/: grant_trust.py  import_companies.py
backend/app/services/: badges.py  bin_check.py  ratelimit.py  (+3 more)
backend/tests/: conftest.py  test_appeals.py  test_auth.py  test_badges.py  test_comments.py  test_companies.py  test_complaints.py  test_evidence.py  test_feed.py  test_moderation.py  test_ratelimit.py  test_registry.py  test_reports.py  test_reviews.py  test_verification.py  test_votes.py
(+54 files in other folders)
